till tooltip improvement

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,10 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" routerLink="planningchart">Planning Chart</a>
-          </li>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="reservationChart">Reservations Chart</a>
+      </li>
       </ul>
     </div>
   </nav>
