--- a/src/app/planning-chart/planning-chart.component.html
+++ b/src/app/planning-chart/planning-chart.component.html
@@ -6,4 +6,6 @@
           [options]="{ responsive: true }">
   </canvas>
 </div> -->
-<p>CHart </p>
+<div class="chart-container">
+  <canvas id="canvas"></canvas>
+</div>
