--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -74,7 +74,7 @@
           <td>{{ room.roomId }}</td>
           <td>{{ room.roomName }}</td>
           <td>{{ room.locationName }}</td>
-          <td>{{ room.pricePerDayPerPerson | currency }}</td>
+          <td>{{ room.pricePerDayPerPerson }}</td>
           <td>{{ room.guestCapacity }}</td>
           <!-- <td>{{ room.stayDateFrom }}</td>
           <td>{{ room.stayDateTo }}</td>
