--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -205,6 +205,10 @@ h4{
   border-bottom-left-radius: 40px !important;
 }
 
+.cell.valid-departure {
+  border: 2px dashed #1940dc; /* Dashed green border for valid departure days */
+  background-color: #eafbe7;   /* Light green background */
+}
 
 
 .selected {
@@ -344,4 +348,35 @@ select {
 
 .tooltip{
   z-index: 10000 !important; 
+}
+
+/* ======== loading spinner ==========*/
+
+/* Spinner container */
+.spinner-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 1000;
+}
+
+/* Spinner styling */
+.spinner {
+  border: 12px solid #f3f3f3; /* Light grey */
+  border-top: 12px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  animation: spin 1.5s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
 }
