final commit before feedback work

--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -231,7 +231,7 @@
             <span class="nights-info">{{ arrivalDateDisplay }} - {{ departureDateDisplay }} ({{ nightsDisplay }})</span>
             <a href="javascript:void(0);" class="reset-link" (click)="resetSelection()">Clear dates</a>
           </div> -->
-          <button class="btn btn-primary" (click)="saveSelection()">Save selection</button>
+          <button class="btn btn-primary" (click)="saveSelection()">Confirm</button>
         </div>
       </div>
     </div>
