--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -130,6 +130,8 @@ h4{
   text-overflow: visible; /* Show ellipsis for overflowing text */
 }
 
+
+
 .reservation-span {
   background-color: rgba(90, 90, 207, 0.5);  /* Color for the reservation */
   color: #fff;
@@ -144,12 +146,12 @@ h4{
   top: 50%; /* Align to the top of the cell */
   /* left: 50%;  */
   transform: translate(-50%, -50%);
-  width:max-content; /* Span the full width of the reservation cells */
+  width: 100%; /* Span the full width of the reservation cells */
   /* height: 100%; */
   white-space: nowrap; /* Prevent text wrapping */
-  overflow: visible; /* Hide overflow */
-  text-overflow: visible; /* Show ellipsis for overflow */
-  display: block; /* Ensure it behaves like a block element within the cell */
+  overflow: hidden; /* Hide overflow */
+  text-overflow: ellipsis; /* Show ellipsis for overflow */
+  display: inline-block; 
   padding: 0 5px;
 }
 
